Mudando a imagem do html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button onclick="reiniciarJogo()" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
                 </div>
             </div>
-            <img src="./img/ia.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
+            <img src="https://cdn.discordapp.com/attachments/862668869470126090/1244697840681222194/foto_de_perfil_lindo-removebg-preview.png?ex=66560eb2&is=6654bd32&hm=2693cc776cc7301d3d76c90f99468c595d34714174091a1de07d2679f01ef910&" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
         </div>
     </div>
 
